--- a/style.css
+++ b/style.css
@@ -38,3 +38,88 @@ Fonts:
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    font-family: 'Rubik', sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: var(--darks-color);
+    background-color: var(--white-color);
+}
+a {
+    text-decoration: none;
+    color: inherit;
+}
+img {
+    vertical-align: middle;
+    max-width: var(--percent100);
+}
+ul {
+    list-style: none;
+}
+strong {
+    font-weight: var(--fw8);
+}
+input::placeholder {
+    font: inherit
+}
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+h1, h2, h3, h4 {
+    font-family: 'Poppins', sans-serif;
+}
+h1 {
+    font-size: calc(1.3em + 1vw);
+    line-height: 1;
+    font-weight: var(--fw8);
+}
+h2 {
+    font-size: 2.5em;
+}
+h3 {
+    font-size: 1.2em;
+    font-weight: var(--fw7);
+}
+h4 {
+    font-size: 1em;
+    font-weight: var(--fw6);
+}
+
+/*--------------------
+  Reusabale Selectors 
+ --------------------*/
+
+.container {
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 0 0.938em;
+}
+.coloumn {
+    margin-left: -0.938ems;
+    margin-right: -0.938em;
+}
+.coloumn .row {
+    padding: 0 0.938em;
+}
+.flexwrap {
+    display: flex;
+    flex-wrap: wrap;
+}
+.flexcenter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.flexitem {
+    display: flex;
+    align-items: center;
+}
+.flexcol {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
