--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ h4 {
     padding: 0 0.938em;
 }
 .coloumn {
-    margin-left: -0.938ems;
+    margin-left: -0.938em;
     margin-right: -0.938em;
 }
 .coloumn .row {
