--- a/style.css
+++ b/style.css
@@ -123,3 +123,85 @@ h4 {
     flex-direction: column;
     gap: 1em;
 }
+.main-links a:hover {
+    color: var(--secondary-color);
+}
+.second-links a:hover {
+    color: var(--light-text-color);
+}
+.icon-sm, .icon-lg {
+    display: flex;
+    align-items: center;
+    padding: 0 0.25em;
+}
+.icon-sm {
+    margin: auto;
+    font-size: 1.25em;
+}
+.icon-lg {
+    font-size: 1.75em;
+    padding: 0 0.75em 0 0;
+}
+
+
+/*------------------------
+         Header
+--------------------------*/
+header li > a {
+    display: flex;
+    position: relative;
+    line-height: inherit;
+    transition: var(--trans-color);
+}
+
+/* ------Header Top------ */
+.header-top .wrapper {
+    justify-content: space-between;
+    font-size: var(--font-small);
+    font-weight: var(--fw3);
+    line-height: 42px;
+    color: var(--light-text-color);
+}
+.header-top .wrapper ul {
+    gap: 2em;
+}
+.header-top li {
+    position: relative;
+}
+.header-top ul li ul {
+    position: absolute;
+    left: -1em;
+    line-height: 2em;
+    border: 1px solid var(--border-color);
+    background-color: var(--white-color);
+    z-index: 1;
+    display: none;
+}
+.header-top .right ul ul li a {
+    padding: 0.25em 1em;
+}
+.header-top .right ul ul li.current a {
+    background-color: var(--border-color);
+}
+.header-top li:hover ul {
+    display: block;
+}
+
+
+
+
+
+
+
+
+
+
+/*---------------------
+      Responsive
+--------------------- */
+
+@media screen and (min-width: 960px) {
+    .container {
+        padding: 0 2em;
+    }
+}
