--- a/style.css
+++ b/style.css
@@ -89,9 +89,9 @@ h4 {
     font-weight: var(--fw6);
 }
 
-/*--------------------
-  Reusabale Selectors 
- --------------------*/
+/*========================
+    Reusabale Selectors 
+========================*/
 
 .container {
     max-width: 1280px;
@@ -143,10 +143,10 @@ h4 {
     padding: 0 0.75em 0 0;
 }
 
-
-/*------------------------
+/*========================
          Header
---------------------------*/
+========================*/
+
 header li > a {
     display: flex;
     position: relative;
@@ -154,7 +154,7 @@ header li > a {
     transition: var(--trans-color);
 }
 
-/* ------Header Top------ */
+/* -------Header Top------- */
 .header-top .wrapper {
     justify-content: space-between;
     font-size: var(--font-small);
@@ -187,6 +187,7 @@ header li > a {
     display: block;
 }
 
+/*-----Header Navigation-----*/
 
 
 
@@ -196,9 +197,10 @@ header li > a {
 
 
 
-/*---------------------
-      Responsive
---------------------- */
+
+/*========================
+        Responsive 
+========================*/
 
 @media screen and (min-width: 960px) {
     .container {
