Nav bar created

--- a/style.css
+++ b/style.css
@@ -142,6 +142,9 @@ h4 {
     font-size: 1.75em;
     padding: 0 0.75em 0 0;
 }
+.mobile-hide {
+    display: none;
+}
 
 /*========================
          Header
@@ -188,8 +191,83 @@ header li > a {
 }
 
 /*-----Header Navigation-----*/
+.header-nav {
+    padding: 1.25em 0;
+    margin-bottom: 1.5em;
+    border-bottom: 1px solid var(--border-color);
+}
+.trigger {
+    font-size: 1.5em;
+    display: flex;
+    padding: 0.25em;
+    margin-right: 0.5em;
+}
+.logo a {
+    position: relative;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.75em;
+    font-weight: var(--fw8);
+    display: flex;
+    padding-left: 0.75em;
+    margin-right: 2em;
+}
 
-
+.logo .circle {
+    position: absolute;
+    top: -15px;
+    left: 0;
+    width: 38px;
+    height: 38px;
+    background-color: var(--light-bg-color);
+    border-radius: var(--percent50);
+    z-index: -1;
+}
+.logo .circle::before {
+    content: '';
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    width: 28px;
+    height: 28px;
+    background-color: var(--secondary-color);
+    border-radius: var(--percent50);
+    opacity: 40%;
+}
+.header-nav nav > ul {
+    line-height: 100px;
+    gap: 2em;
+}
+.fly-item {
+    position: absolute;
+    height: 16px;
+    font-size: var(--font-smaller);
+    text-align: center;
+    padding: 3px;
+    line-height: 10px;
+    color: var(--white-color);
+}
+nav .fly-item {
+    background-color: var(--primary-color);
+    border-radius: 3px;
+    width: 30px;
+    top: 50%;
+    right: -32px;
+    margin-top: -26px;
+}
+.header-nav .right {
+    position: relative;
+    margin-left: auto;
+}
+.header-nav .right .icon-lg {
+    position: relative;
+}
+.header-nav .right .fly-item {
+    background-color: var(--dark-color);
+    border-radius: var(--percent50);
+    width: 16px;
+    top: 0;
+    right: 10px;
+}
 
 
 
@@ -205,5 +283,22 @@ header li > a {
 @media screen and (min-width: 960px) {
     .container {
         padding: 0 2em;
+    }
+    .desktop-hide {
+        display: none;
+    }
+    .mobile-hide {
+        display: block;
+    }
+    .logo a {
+        margin-right: 2em;
+    }
+    .header-nav {
+        margin: 0;
+        padding: 0;
+        border-bottom: 0;
+    }
+    .header-nav .right li > a {
+        margin-left: 1em;
     }
 }
