--- a/style.css
+++ b/style.css
@@ -93,6 +93,9 @@ h4 {
     Reusabale Selectors 
 ========================*/
 
+.mobile-hide {
+    display: none;
+}
 .container {
     max-width: 1280px;
     margin: 0 auto;
@@ -142,9 +145,60 @@ h4 {
     font-size: 1.75em;
     padding: 0 0.75em 0 0;
 }
-.mobile-hide {
-    display: none;
+.mini-text {
+    font-size: var(--font-smaller);
+    color: var(--light-text-color);
 }
+.view-all {
+    font-size: var(--font-small);
+    display: flex;
+    gap: 1em;
+    transition: var(--trans-color);
+}
+.product .media {
+    position: relative;
+    overflow: hidden;
+    flex-shrink: 0;
+}
+.object-cover img {
+    position: absolute;
+    width: var(--percent100);
+    height: var(--percent100);
+    object-fit: cover;
+    display: block;
+}
+.btn {
+    font-size: var(--font-small);
+    padding: 0.9em 2em;
+    border-radius: 2em;
+    height: auto;
+    width: fit-content;
+    transition: var(--trans-bg-color);
+}
+.btn-primary{
+    background-color: var(--primary-color);
+    color: var(--white-color);
+}
+.btn-primary:hover {
+    background-color: var(--dark-color);
+}
+.btn-secondary{
+    background-color: var(--secondary-dark-color);
+    color: var(--white-color);
+}
+.btn-secondary:hover {
+    background-color: var(--light-bg-color);
+    color: var(--secondary-dark-color);
+}
+.btn-light{
+    background-color: var(--light-bg-color);
+}
+.btn-light:hover {
+    background-color: var(--secondary-dark-color);
+    color: var(--white-color);
+}
+
+
 
 /*========================
          Header
@@ -269,6 +323,15 @@ nav .fly-item {
     right: 10px;
 }
 
+/* mega menu */
+nav .mega .flexcol {
+    flex: 1;
+    min-width: 180px;
+    padding-right: 2.5em;
+    margin-bottom: 1.5em;
+    z-index: 1;
+}
+
 
 
 
@@ -301,4 +364,73 @@ nav .fly-item {
     .header-nav .right li > a {
         margin-left: 1em;
     }
+    /* mega menu */
+    nav .mega {
+        position: absolute;
+        width: 100%;
+        height: auto;
+        top: auto;
+        left: 0;
+        right: 0;
+        line-height: 2em;
+        padding: 2.5em;
+        background-color: var(--light-bg-color);
+        box-shadow: 0 30px 20px -30px rgb(0 0 0 / 20%) ;
+        z-index: 100;
+        display: none;
+    }
+    nav li.has-child:hover .mega {
+        display: block;
+    }
+    nav .mega .wrapper {
+        display: flex;
+    }
+    nav .mega h4 {
+        font-size: 0.8em;
+        text-transform: uppercase;
+    }
+    nav .mega ul {
+        font-size: var(--font-small);
+    }
+    nav .mega .women-brands {
+        display: flex;
+        flex-wrap: wrap;
+        max-width: 180px;
+    }
+    nav .mega .women-brands li {
+        min-width: 80px;
+    }
+    nav .mega .view-all {
+        margin-top: 1em;
+    }
+    nav .mega .product {
+        flex: 2;
+        padding: 0;
+        position: relative;
+        align-items: center;
+    }
+    nav .mega .product .row {
+        width: var(--percent100);
+    }
+    nav .mega .product .media {
+        height: 400px;
+    }
+    nav .mega .product .text-content {
+        line-height: initial;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 0.5em;
+        gap: 0.5em;
+        position: absolute;
+        bottom: 4em;
+        width: var(--percent100);
+    }
+    nav .mega .product .text-content h4 {
+        font-size: 2em;
+        font-weight: var(--fw8);
+        color: var(--secondary-dark-color);
+        text-align: center;
+    }
+
 }
