--- a/style.css
+++ b/style.css
@@ -204,7 +204,7 @@ h4 {
          Header
 ========================*/
 
-header li > a {
+:where(.off-canvas, header) li > a {
     display: flex;
     position: relative;
     line-height: inherit;
@@ -234,10 +234,10 @@ header li > a {
     z-index: 1;
     display: none;
 }
-.header-top .right ul ul li a {
+:where(.header-top, .thetop-nav) .right ul ul li a {
     padding: 0.25em 1em;
 }
-.header-top .right ul ul li.current a {
+:where(.header-top, .thetop-nav) .right ul ul li.current a {
     background-color: var(--border-color);
 }
 .header-top li:hover ul {
@@ -456,4 +456,57 @@ form.search button:hover {
     background-color: var(--white-color);
     color: var(--secondary-dark-color);
     opacity: 60%;
+}
+.off-canvas .departments .dpt-head {
+    font-size: var(--font-small);
+    border: 1px solid var(--light-bg-color);
+    border-radius: 5px 5px 0 0;
+    background-color: var(--light-bg-color);
+    padding: 1em;
+    margin-bottom: 1em;
+    text-align: center;
+}
+.off-canvas .has-child > :where(ul, .mega) {
+    font-size: var(--font-small);
+    font-weight: var(--fw3);
+    line-height: 28px;
+    padding-left: 3em;
+}
+.off-canvas nav > ul, .off-canvas .thetop-nav  ul {
+    flex-direction: column;
+    align-items: flex-start;
+    font-size: var(--font-small);
+    line-height: 36px;
+    padding-top: 1.5em;
+    margin: 1.25em 0;
+    border-top: 1px solid var(--border-color)
+}
+.off-canvas nav .mega {
+    padding: 0;
+}
+.off-canvas nav .mega .product {
+    display: none;
+}
+.off-canvas .has-child .icon-sm {
+    padding: 0.5em;
+    line-height: initial;
+}
+.off-canvas .departments .icon-sm {
+    transform: rotate(90deg);
+}
+.off-canvas .has-child {
+    width: var(--percent100);
+}
+.off-canvas .thetop-nav .right > ul > :where(:nth-child(4), li:nth-child(5)) > a {
+    display: none;
+}
+.off-canvas .thetop-nav .right > ul ul {
+    display: flex;
+    flex-direction: row;
+}
+.off-canvas .thetop-nav .right  ul ul li a {
+    padding: .5em;
+    border: 1px solid var(--border-color);
+    line-height: 16px;
+    margin: 0 0.5em 0.5em 0;
 }
