--- a/style.css
+++ b/style.css
@@ -421,6 +421,16 @@ form.search button:hover {
     background-color: var(--white-color);
     overflow-y: auto;
     z-index: 999999;
+
+    transform: translateX(-100%);
+    visibility: hidden;
+    transition: transform .4s, visibility .4s;
+    will-change: transform, visibility;
+}
+.show-menu .site-off {
+    transform: translateX(0);
+    visibility: visible;
+    transition: transform .4s 0s, visibility 0s 0s;
 }
 .off-canvas {
     width: var(--percent100);
