feature - Slider added

--- a/responsive.css
+++ b/responsive.css
@@ -158,5 +158,11 @@
         width: max-content;
         padding-right: 6em;
     }
+
+     /* Slider */
+     .slider > div > .wrapper {
+        width: calc(100% - (300px + 2em));
+        margin-left: auto;
+    }
     
 }
