--- a/style.css
+++ b/style.css
@@ -575,3 +575,17 @@ form.search button:hover {
 .swiper-pagination .swiper-pagination-bullet-active {
     background-color: var(--secondary-dark-color);
 }
+
+/*------------Brands------------*/
+.brands .wrapper {
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 2em 0;
+}
+.brands .brand-logo img {
+    opacity: 40%;
+    transition: opacity .3s;
+}
+.brands .brand-logo img:hover {
+    opacity: 80%;
+}
