--- a/responsive.css
+++ b/responsive.css
@@ -1,3 +1,13 @@
+@media screen and (min-width: 768px){
+    .products .price .current {
+        font-size: 1.25em;
+    }
+    .products.mini {
+        flex: 0 0 50%;
+    }
+}
+
+
 @media screen and (min-width: 960px) {
     .container {
         padding: 0 2em;
@@ -165,4 +175,11 @@
         margin-left: auto;
     }
     
+    /* Trending Products */
+    .trending .products {
+        flex: 0 0 33.3333%;
+    }
+    .trending .products.big .media {
+        max-height: 373px;
+    }
 }
