--- a/style.css
+++ b/style.css
@@ -266,7 +266,7 @@ h4 {
     margin-right: 2em;
 }
 
-.logo .circle {
+:where(.logo, .sec-top) .circle {
     position: absolute;
     top: -15px;
     left: 0;
@@ -276,7 +276,7 @@ h4 {
     border-radius: var(--percent50);
     z-index: -1;
 }
-.logo .circle::before {
+:where(.logo, .sec-top) .circle::before {
     content: '';
     position: absolute;
     top: 5px;
@@ -588,4 +588,226 @@ form.search button:hover {
 }
 .brands .brand-logo img:hover {
     opacity: 80%;
+}
+
+/*-----------Products----------*/
+
+/* Title */
+.sec-top {
+    justify-content: space-between;
+    margin-bottom: 2em;
+    padding-bottom: 0.5em;
+    border-bottom: 1px solid var(--border-color);
+}
+.sec-top h2 {
+    position: relative;
+    font-size: 1.5em;
+    font-weight: var(--fw7);
+}
+.sec-top h2 span:not(.circle) {
+    padding-left: 2em;
+}
+.sec-top h2 .circle {
+    top: -5px;
+}
+
+
+/* Global products */
+.products .offer {
+    text-align: center;
+    margin-bottom: 1.5em;
+}
+.products .offer p{
+    text-transform: uppercase;
+    margin-bottom: 0.5em;
+}
+.products .offer ul {
+    gap: 1em;
+}
+.products .offer ul li {
+    position: relative;
+    padding: 0.5em;
+    width: 34px;
+    height: 34px;
+    background-color: var(--light-bg-color);
+    color: var(--secondary-dark-color);
+    line-height: initial;
+    border-radius: 5px;
+}
+.products .offer ul li:not(:last-child)::after {
+    content: ':';
+    position: absolute;
+    right: -0.6em;
+    color: var(--light-text-color);
+}
+.products :where(.image, .thumbnail) img {
+    transition: transform .3s;
+}
+.products :where(.image, .thumbnail):hover img {
+    transform: scale(1.1);
+}
+.products .media {
+    overflow: hidden;
+    position: relative;
+}
+.products .hoverable {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+.products .hoverable li a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 28px;
+    height: 28px;
+    background-color: var(--white-color);
+    line-height: 1;
+    margin: .25em;
+    padding: .25em;
+    border-radius: var(--percent50);
+    opacity: .5;
+    transition: var(--trans-bg-color), opacity .3s;
+}
+.products .item:hover .hoverable li a {
+    opacity: 1;
+}
+.products .hoverable li a:hover {
+    background-color: var(--dark-color);
+    color: var(--white-color);
+}
+.products .hoverable li.active a:hover {
+    background-color: var(--primary-color);
+}
+.products .hoverable li:not(.active) {
+    transform: translateX(100%);
+    opacity: 0;
+    transition: transform .3s , opacity .3s;
+}
+.products .item:hover .hoverable li {
+    transform: translateX(0%);
+    opacity: 1;
+}
+.products .hoverable li:last-child {
+    transition-delay: .1s;
+}
+.products .discount {
+    position:absolute;
+    z-index: 1;
+    bottom:0;
+    right: 0;
+    font-size: var(--font-smaller);
+    font-weight: var(--fw5);
+    width: 28px;
+    height: 28px;
+    line-height: 1;
+    padding: .25em;
+    margin: .40em;
+    background-color: rgba(0, 0, 0, 0.3);
+    color: var(--white-color);
+    border-radius: var(--percent50);
+}
+.products .content {
+    display: flex;
+    flex-direction: column;
+}
+.products:where(.big, .main.one) .content {
+    gap: 1em;
+    margin-top: 1.25em;
+}
+.products .rating {
+    display: flex;
+    align-items: center;
+    gap: 0.5em;
+}
+.products .rating .stars {
+    width: 80px;
+    height: 20px;
+    /* src: remixicon.com */
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='16' height='16'%3E%3Cpath d='M12.0006 18.26L4.94715 22.2082L6.52248 14.2799L0.587891 8.7918L8.61493 7.84006L12.0006 0.5L15.3862 7.84006L23.4132 8.7918L17.4787 14.2799L19.054 22.2082L12.0006 18.26Z' fill='rgba(240,187,64,1)'%3E%3C/path%3E%3C/svg%3E");
+    background-position-y: top;
+    background-repeat-y: no-repeat;
+}
+.products h3 {
+    width: 170px;
+    font-family: 'Rubik';
+    font-size: 1em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 2;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+}
+.products h3 a:hover{
+    text-decoration: underline;
+}
+.products .price .current {
+    color: var(--primary-color);
+    font-size: calc(1em + 1vw);
+    margin-right: 0.25em;
+}
+.products .price .normal {
+    color: var(--light-text-color);
+    text-decoration: line-through;
+}
+.products .stock .qty {
+    display: flex;
+    justify-content: space-between;
+}
+.products .stock .bar {
+    height: 3px;
+    border-radius: 5px;
+    background-color: var(--border-color);
+    margin-top: 1em;
+    overflow: hidden;
+}
+.products .stock .bar .available {
+    width: 21%;
+    height: 100%;
+    border-radius: 5px;
+    background-color: var(--secondary-color);
+}
+.products.mini .item {
+    display: flex;
+    position: relative;
+}
+.products .stock-danger {
+    color: var(--primary-color);
+}
+.flexwrap .row {
+    flex: 0 0 100%;
+    margin-bottom: 2em;
+    width: 100%;
+}
+
+/* BIG product */
+.products.big .item {
+    flex-direction: column;
+    border: 2px solid var(--secondary-dark-color);
+    border-radius: 7px;
+    padding: 2.5em;
+    max-width: 460px;
+    margin: 0 auto;
+}
+.products.big .item .offer p {
+    font-size: 1.1em;
+    font-weight: var(--fw5);
+    color: var(--secondary-dark-color);
+}
+
+/* MINI product */
+.products.mini .item {
+    margin-bottom: 2em;
+}
+.products.mini .media {
+    width: 130px;
+    height: 160px;
+    margin-right: 1.25em;
+}
+.products.mini .content {
+    margin: 0;
+    gap: 0.75em;
+}
+.products:where(.mini, .main) h3 {
+    font-weight: 400;
 }
