--- a/responsive.css
+++ b/responsive.css
@@ -7,7 +7,6 @@
     }
 }
 
-
 @media screen and (min-width: 960px) {
     .container {
         padding: 0 2em;
@@ -29,7 +28,8 @@
     .header-nav .right li > a {
         margin-left: 1em;
     }
-    /* mega menu */
+
+    /* Mega Menu */
     nav .mega {
         position: absolute;
         width: 100%;
@@ -117,6 +117,7 @@
         padding: 0 1.5em;
         border-bottom: 1px solid var(--border-color)
     }
+
     /* Child Menu */
     .dpt-menu .has-child > ul, .dpt-menu .mega {  
         position: absolute;
