feat: Add Featured Products section below Trending Products

--- a/style.css
+++ b/style.css
@@ -697,7 +697,7 @@ form.search button:hover {
     display: flex;
     flex-direction: column;
 }
-.products:where(.big, .main.one) .content {
+.products:where(.big, .main, .one) .content {
     gap: 1em;
     margin-top: 1.25em;
 }
@@ -714,6 +714,9 @@ form.search button:hover {
     background-position-y: top;
     background-repeat-y: no-repeat;
 }
+/* .products .item:where(:nth-child(3)) .stars {
+    width: 64px;
+} */
 .products h3 {
     width: 170px;
     font-family: 'Rubik';
@@ -817,4 +820,43 @@ form.search button:hover {
 }
 .products:where(.mini, .main) h3 {
     font-weight: 400;
+}
+
+/* MAIN product */
+.products.main .item {
+    position: relative;
+    flex-direction: column;
+    flex: 0 0 100%;
+    padding: 0 .95em;
+    padding-bottom: 2em;
+}
+.products.main .media {
+    height: 390px;
+}
+.products.main .footer {
+    position: absolute;
+    left: 0;
+    right: 0;
+    padding: 0 1em 1em;
+    border-radius: 7px;
+    z-index: 1;
+    background: linear-gradient(0deg, var(--light-bg-color) 0%, var(--white-color) 70%);
+    opacity: 0;
+    visibility: hidden;
+    will-change: opacity;
+    transition: all .2s ease-in-out;
+}
+.products.main .footer ul {
+    margin-top: 150px;
+    border-top: 1px solid var(--border-color);
+    padding: 1.25em 0 0 1.25em;
+    list-style: disc;
+    line-height: 2em;
+}
+.products.main .item:hover .footer {
+    opacity: 1;
+    visibility: visible;
+}
+.products.main .item .content > *:not(.footer) {
+    z-index: 3;
 }
