--- a/responsive.css
+++ b/responsive.css
@@ -8,7 +8,8 @@
     .products .price .current {
         font-size: 1.25em;
     }
-    .products.mini {
+    .products.mini,
+    .banner .row {
         flex: 0 0 50%;
     }
     .products.main .item {
