--- a/style.css
+++ b/style.css
@@ -895,3 +895,21 @@ form.search button:hover {
 .banner .btn-primary {
     z-index: 3;
 }
+.banners .product-cat .item {
+    display: flex;
+    padding: 1.5em;
+}
+.banners .product-cat .image{
+    max-width: 150px;
+}
+.mini-links ul {
+    font-size: var(--font-small);
+    color: var(--light-text-color);
+    margin-top: 1em;
+}
+.banners .second-links {
+    margin-top: 2em;
+}
+.mini-links li a:hover {
+    text-decoration: underline;
+}
