--- a/style.css
+++ b/style.css
@@ -940,3 +940,9 @@ form.search button:hover {
     max-width: 500px;
     width: var(--percent100);
 }
+
+/*-----Widget-------*/
+.widgets {
+    padding: 3.5em 2.5em;
+    background-color: var(--border-color);
+}
