--- a/style.css
+++ b/style.css
@@ -946,3 +946,34 @@ form.search button:hover {
     padding: 3.5em 2.5em;
     background-color: var(--border-color);
 }
+
+/*-----Footer-------*/
+.footer-info {
+    padding: 3.5em 0 5em;
+}
+.footer-info .flexcol {
+    align-items: center;
+    gap:0
+}
+.footer-info .socials a {
+    font-size: 1.5em;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--light-bg-color);
+    border-radius: var(--percent50);
+    margin: .25em;
+    transition: var(--trans-bg);
+}
+.footer-info .socials a:hover {
+    background-color: var(--border-color);
+}
+.footer-info .logo a {
+    margin: 0 0 1em -1em;
+}
+.footer-info .mini-text {
+    margin-top: 2em;
+    text-align: center;
+}
