--- a/style.css
+++ b/style.css
@@ -977,3 +977,43 @@ form.search button:hover {
     margin-top: 2em;
     text-align: center;
 }
+
+/*-----Mobile Menu-------*/
+.mobile-menu {
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 60px;
+    background-color: var(--white-color);
+    box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
+    z-index: 9999999;
+}
+.mobile-menu li{
+    flex: 1;
+}
+.mobile-menu nav li a {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0.5em 0;
+    color: var(--light-text-color);
+    transition: var(--trans-color);
+}
+.mobile-menu nav li a:hover {
+    color: var(--dark-color);
+}
+.mobile-menu nav li a span {
+    font-size: var(--font-smaller);
+}
+.mobile-menu nav li a i {
+    font-size: 1.25em;
+}
+.mobile-menu .fly-item {
+    right: 50%;
+    width: 16px;
+    border-radius: var(--percent50);
+    background-color: var(--secondary-dark-color);
+    margin-right: -20px;
+}
